enum order_status {
  created
  processing
  finished
  cancelled
}

Table train {
  id int [primary key]
  train_name varchar(255)
  project_name varchar(255)
  project_owner varchar(255)
  created_at timestamp
}

Table params {
  id int [ref: - train.id]
  epochs int
  batch int
  workers int
}

Table files {
  id int [primary key]
  train_id int [ref: - train.id]
  file_type varchar(255)
  file_path varchar(255)
}

Table jobs {
  id int [primary key]
  train_id int [ref: - train.id]
  status order_status
  created_at timestamp
  scheduled_at timestamp
  finished_at timestamp
}